tests/NormalTests/paczka2/big_fuzzy/91422292.err
Error in line 1: e6wbbij A637 40,4
Error in line 7: A353 A353 37,2
Error in line 19: RJI A6l7 7,6
Error in line 20: RJI A637 13,0
Error in line 25: RJI A389 1,1
Error in line 40: A353 A353 33,5
Error in line 41: A353 A986 51,4
Error in line 63: MYL A353 57,3
Error in line 78: e6wbbij A986 4,6
Error in line 80: e6wbbij A389 42,5
Error in line 91: RJI A38b 36,1
Error in line 104: cpb4a A637 31,4
Error in line 93: RJI A389 65,7
Error in line 102: MYL A353 48,3
Error in line 92: 21ia6DGxmD A389 18,2
Error in line 84: A353 A637 95,3
Error in line 115: 21ia6DGxmD A637 55,2
Error in line 114: RJI A353 28,8
Error in line 138: RJI A637 16,3
Error in line 150: ysZxPFnO8P A986 39,0
Error in line 155: ysZxPFnO8P A986 80,19
Error in line 154: ysZxPFnO8P A637 9,1
Error in line 156: ysZxPFnO8P A389 70,5
Error in line 161: ysZxPFnO8P A353 103,2
Error in line 117: cpb4a A389 108,8
Error in line 147: 21ia6DGxmD A389 86,1
Error in line 198: cpb4a A389 76,9
Error in line 197: RJI A353 90,2
Error in line 207: ysZxPFnO8P A353 107,52
Error in line 193: A353 A389 51,9
Error in line 213: A353 A986 68,1
Error in line 203: ysZxPFnO8P A353 21,7
Error in line 221: RJI A353 d7,4
Error in line 223: MYL A637 54,8
Error in line 227: ysZxPFnO8P A637 63,7
Error in line 217: RJI A353 33,8
Error in line 230: ysZxPFnO8P A389 13,5
Error in line 233: ysZxPFnO8P A637 9,5
Error in line 234: ysZxPFnO8P A389 71,1
